--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "acorn": "^7.1.1",
     "body-parser": "^1.19.0",
     "chalk": "^4.0.0",
     "cookie-parser": "^1.4.5",
